2010-06-24  Robert Larice
 * src/main.c :
	make use of allready defined enumerate Ipc_Status_t (IPC_STATUS_OK)
 * src/xspice/icm/digital/d_and/cfunc.mod,
 * src/xspice/icm/digital/d_buffer/cfunc.mod,
 * src/xspice/icm/digital/d_fdiv/cfunc.mod,
 * src/xspice/icm/digital/d_inverter/cfunc.mod,
 * src/xspice/icm/digital/d_nand/cfunc.mod,,
 * src/xspice/icm/digital/d_nor/cfunc.mod,
 * src/xspice/icm/digital/d_open_c/cfunc.mod,
 * src/xspice/icm/digital/d_open_e/cfunc.mod,
 * src/xspice/icm/digital/d_or/cfunc.mod,,
 * src/xspice/icm/digital/d_xnor/cfunc.mod,
 * src/xspice/icm/digital/d_xor/cfunc.mod :
	make use of allready defined enumerate Digital_State_t (ONE,ZERO)

2010-06-23  Holger Vogt
 * configure.in, INSTALL, DEVICES, bsim3/b3ld.c, bsim3/b3set.c, bsim3/bsim3def.f,
   spinit.in: Multi-core support with OpenMP for BSIM3 vers. 3.3.0

2010-06-23  Robert Larice
 * src/ngmultidec.c,
 * src/frontend/inpcom.c,
 * src/frontend/help/help.c,
 * src/frontend/numparam/numpaif.h,
 * src/frontend/numparam/xpressn.c,
 * src/include/cpextern.h,
 * src/include/cpstd.h,
 * src/include/dgen.h,
 * src/include/ftedbgra.h,
 * src/include/fteext.h,
 * src/include/hlpdefs.h,
 * src/include/inpptree.h,
 * src/include/sensgen.h,
 * src/include/tfdefs.h,
 * src/maths/cmaths/cmath2.c,
 * src/maths/ni/niniter.c,
 * src/spicelib/devices/cpl/cplload.c,
 * src/spicelib/devices/cpl/cplsetup.c :
 ansi function declarations (prototypes)

2010-06-23  Robert Larice
 * src/main.c,
 * src/frontend/com_measure2.c,
 * src/frontend/hpgl.c,
 * src/frontend/inpcom.c,
 * src/frontend/numparam/spicenum.c,
 * src/maths/misc/randnumb.c :
 ansi function definitions, type foo() {} --> type foo(void) {}

2010-06-23  Robert Larice
 * src/frontend/breakp.c,
 * src/frontend/com_let.c,
 * src/frontend/com_measure2.c,
 * src/frontend/com_sysinfo.c,
 * src/frontend/cpitf.c,
 * src/frontend/dotcards.c,
 * src/frontend/measure.c,
 * src/frontend/mw_coms.c,
 * src/frontend/mw_coms.h,
 * src/frontend/runcoms.c,